# market_shock_reir_demo

./: .gitignore  README.md  REPO_SETUP.md  pyproject.toml
benchmarks/: __init__.py  bench.py
slowlib/: __init__.py  api.py  slow_ops.py
slowlib/benchmarks/: __init__.py  bench.py
tests/: test_correctness.py
