[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-shock-reir-demo"
version = "0.1.0"
description = "Market shock pipeline demo repo for REIR hackathon demos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pytest>=8.0",
]

[project.scripts]
slowbench = "benchmarks.bench:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["slowlib*", "benchmarks*"]
